[package]
name = "bender"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-rt = "2.10"
actix-service = "2.0.2"
actix-web = "4.8"
async-trait = "0.1.84"
azure_core = "0.21"
azure_storage_blobs = "0.21"
azure_storage = "0.21"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
http = "1.2"
log = "0.4"
mime = "0.3"
rand = "0.8"
reqwest = { version = "0.12" }
sentry = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["sync"] }
tonic = { version = "0.12", features = ["tls-roots"] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git" }
uuid = { version = "0.7", features = ["serde", "v4", "u128" ]}
