[package]
name = "bender"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-rt = "2.11"
actix-service = "2.0.3"
actix-web = "4.13"
async-trait = "0.1.89"
azure_identity = "0.32.0"
azure_storage_blob = "0.9"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
http = "1.4"
log = "0.4"
mime = "0.3"
rand = "0.10"
reqwest = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["sync"] }
tonic = { version = "0.12", features = ["tls-roots"] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama"] }
uuid = { version = "0.7", features = ["serde", "v4", "u128" ]}
openssl-sys = { version = "0.9.111", features = ["vendored"], optional = true }
tracing = "0.1.44"

[features]
default = []
openssl-vendored = ["dep:openssl-sys"]
